# BagualesPOS

./: .dockerignore  .env.example  .gitignore  .python-version  Dockerfile  Makefile  README.md  dev-requirements.txt  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  example.env  main.py  manage.py  pyproject.toml  requirements.txt
BagualesPOS/: asgi.py  context_processors.py  settings.py  urls.py  wsgi.py
BagualesPOS/settings/: base.py  development.py  production.py  settings.py  testing.py
administration/: urls.py  views.py
administration/templates/: administration.html  product_administration.html
clients/: admin.py  apps.py  choices.py  forms.py  managers.py  models.py  signals.py  tests.py  urls.py  views.py
clients/migrations/: 0001_initial.py  0002_alter_client_balance_and_more.py  0002_initial.py  0003_alter_client_approved_customer_account.py  0003_alter_client_options_and_more.py  (+6 more)
docker/: Dockerfile  Dockerfile.dev  Dockerfile.prod  Dockerfile.testing  docker-compose.yml  entrypoint.development.sh  entrypoint.production.sh
inventory/: admin.py  managers.py  models.py  urls.py  views.py
products/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
records/: urls.py  views.py
sales/: admin.py  forms.py  managers.py  models.py  signals.py  urls.py  views.py
settings/: base.py
templates/: index.html  login.html  modal.html
templates_dev/: index.html  login.html
templates_prod/: index.html
users/: admin.py  models.py  signals.py
utils/: __init__.py  env_utils.py  fields.py  formats.py  mixins.py
(+125 files in other folders)
